fixed  the logo on small wides

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,9 +59,17 @@ h4 {
     font-size: 10vh;
 }
 
+
 .logo-img {
     max-height: 7vh;
 }
+
+@media (max-width: 374px) {
+    .logo-img {
+        max-height: 6vh;
+    }
+  }
+
 
 .align-center {
     align-self: center;
